--- a/radio.css
+++ b/radio.css
@@ -5,52 +5,46 @@
     --background-color-purple: #8055FF;
 }
 
-.checkbox-wrapper {
+.radio-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 6.5rem;
     height: 4rem;
-    gap: 2rem;
+    gap: 1.5rem;
     border-radius: 0.3125rem;
     border: 0.0625rem dashed var(--background-color-purple);
     box-sizing: border-box;
 }
 
-.checkbox {
+.radio-button {
+    width: 1rem;
+    height: 1rem;
     position: relative;
 }
 
-.checkbox__area {
-    appearance: none;
-    width: 1rem;
-    height: 1rem;
+.radio-button:after {
+    position: absolute;
+    width: 0.625rem;
+    height: 0.9375rem;
+    top: 0;
+    content: "";
     background-color: var(--background-color-white);
     border: 0.0625rem solid var(--background-color-day-light-blue);
-    border-radius: 0.125rem;
-    box-sizing: border-box;
-    margin: 0;
+    padding: 0 3px;
+    border-radius: 50%;
 }
 
-.checkbox__area:active {
-    background-color: var(--background-color-day-light-blue);
-}
-
-.checkbox__area:checked {
+.radio-button:checked:before {
+    content: "";
+    display: block;
+    position: relative;
+    top: 0.293rem;
+    left: 0.325rem;
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    z-index: 1;
     background-color: var(--background-color-blue);
-    border-color: var(--background-color-blue);
 }
 
-.checkbox__area:checked + .checkbox__icon {
-    opacity: 1;
-}
-
-.checkbox__icon {
-    position: absolute;
-    opacity: 0;
-    left: 0;
-    right: 0;
-    width: 1rem;
-    fill: var(--background-color-white);
-    transition: opacity 0.25s ease-in;
-}
