--- a/radio.css
+++ b/radio.css
@@ -23,6 +23,11 @@
     position: relative;
 }
 
+.radio-button:checked:after {
+    background-color: var(--background-color-blue);
+    border: 0.0625rem solid var(--background-color-blue);
+}
+
 .radio-button:after {
     position: absolute;
     width: 0.625rem;
@@ -45,6 +50,5 @@
     height: 0.5rem;
     border-radius: 50%;
     z-index: 1;
-    background-color: var(--background-color-blue);
+    background-color: var(--background-color-white);
 }
-
