--- a/button.css
+++ b/button.css
@@ -1,4 +1,4 @@
-:root {
+root {
     --background-color-blue: #459DF5;
     --background-color-white: #FFFFFF;
     --background-color-purple: #8055FF;
@@ -18,13 +18,13 @@
 .block {
     display: flex;
     flex-direction: column;
-}
-
-.block_big {
     gap: 1.7rem;
+
 }
 
-.block_small {
+.block__item {
+    display: flex;
+    flex-direction: column;
     margin-top: 3rem;
     margin-left: 3rem;
 }
@@ -37,7 +37,7 @@
     gap: 2.5rem;
 }
 
-.button {
+.block__button {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -47,78 +47,57 @@
     position: absolute;
 }
 
-.text_color_white {
-    color: var(--background-color-white);
-}
-
-.text_color_blue {
-    color: var(--background-color-blue);
-}
-
-.button_color_blue {
+.block__button_color-blue {
     background-color: var(--background-color-blue);
 }
 
-.button_color_white {
+.block__button_color-white {
     background-color: var(--background-color-white);
 }
 
-.text {
+.block__text {
     font-family: 'Ubuntu', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 0.8125rem;
+    line-height: 1rem;
 }
 
-.button_medium_icon_text {
-    width: 7rem;
-    height: 2rem;
+.block__text__color-white {
+    color: var(--background-color-white);
+}
+
+.block__text_color-blue {
+    color: var(--background-color-blue);
+}
+
+.block__button_size-big {
     padding: 0.5rem 1rem 0.5rem 1rem;
     gap: 0.5rem;
 }
 
-.button_medium_text {
-    width: 5.5rem;
-    height: 2rem;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    gap: 0.5rem;
-}
-
-.button_medium_icon {
-    width: 2rem;
-    height: 2rem;
+.block__button_padding-big {
     padding: 0.5rem;
 }
 
-.button_small_icon_text {
-    width: 5.75rem;
-    height: 1.5rem;
+.block__button_size-small {
     padding: 0.25rem 0.5rem 0.25rem;
     gap: 0.5rem;
 }
 
-.button_small_text {
-    width: 4.5rem;
-    height: 1.5rem;
-    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-}
-
-.button_small_icon {
-    width: 1.5rem;
-    height: 1.5rem;
+.block__button_padding-small {
     padding: 0.25rem;
-    fill: #23a030;
 }
 
-.image-size {
+.block__image_size {
     width: 1rem;
 }
 
-.image_color_white {
+.block__image_color-white {
     fill: var(--background-color-white);
 }
 
-.image_color_blue {
+.block__image_color-blue {
     fill: var(--background-color-blue);
 }
 
