--- a/dropdowns.css
+++ b/dropdowns.css
@@ -16,27 +16,17 @@
     box-sizing: border-box;
 }
 
-.color_blue {
+.radio-button_invisible {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+input:checked + span {
     color: var(--background-color-blue);
 }
 
-.color_while {
-    color: var(--background-color-white)
-}
-
-.background_color_blue {
-    background-color: var(--background-color-blue);
-}
-
-.background_color_white {
-    background-color: var(--background-color-white);
-}
-
-.color_while {
-    color: var(--background-color-white)
-}
-
-.text {
+.dropdown__text {
     font-family: 'Ubuntu', serif;
     font-style: normal;
     font-weight: 400;
@@ -44,51 +34,51 @@
     line-height: 1rem;
 }
 
-.text__padding-second:first-child {
+.checkbox__text_padding-second:first-child {
     margin-top: 0.5rem;
 }
 
-.text__padding-first {
-    padding: 0.5rem 4.875rem 0.5rem 0.5rem;
+.checkbox__text_padding-first {
+    padding: 0.5rem 0 0.5rem 0;
 }
 
-.text__padding-second {
-    padding: 0.5rem 4.875rem 0.5rem 1rem;
+.checkbox__text_padding-second {
+    padding: 0.5rem 0 0.5rem 1rem;
 }
 
-.text__padding-third {
+.checkbox__text_padding-third {
     padding: 1rem 1rem 0.5rem 1rem;
 }
 
-.checkbox-border {
+.dropdown {
     background: var(--background-color-white);
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
 
-.margin-top {
+.dropdown_margin {
     margin-top: 3rem;
 }
 
-.checkbox__first-size {
+.dropdown__item_first-size {
     width: 10rem;
     height: 13rem;
     margin-left: 3rem;
 }
 
-.checkbox__second-size {
+.dropdown__item_second-size {
     width: 10rem;
     height: 13rem;
     margin-left: 3rem;
 }
 
-.checkbox__third-size {
+.dropdown__item_third-size {
     width: 10rem;
     height: 5.5rem;
     margin-left: 3rem;
 }
 
-.checkbox__fourth-size {
+.dropdown__item_fourth-size {
     width: 10rem;
     height: 7rem;
     display: flex;
@@ -97,7 +87,7 @@
     gap: 0.5rem;
 }
 
-.checkbox__fifth-size {
+.dropdown__item_fifth-size {
     width: 10rem;
     height: 7rem;
     display: flex;
@@ -106,29 +96,23 @@
     gap: 0.5rem;
 }
 
-.position {
-    position: relative;
-}
-
-.flex {
-    display: flex;
-    align-items: center;
-    margin-left: 1rem;
-}
-
-.item {
+.dropdown__label {
     display: flex;
     align-items: center;
     width: 9rem;
     height: 2rem;
+    position: relative;
+}
+
+.dropdown__item_left-padding {
     padding-left: 1rem;
 }
 
-.item:first-child {
+.dropdown__label:first-child {
     margin-top: 0.5rem;
 }
 
-.display-column {
+.dropdown__display-column {
     flex-direction: column;
 }
 
@@ -136,7 +120,7 @@ input::-webkit-input-placeholder {
     color: var(--background-color-day-light-blue);
 }
 
-.input {
+.input-border {
     box-sizing: border-box;
     width: 8rem;
     height: 2rem;
@@ -146,7 +130,7 @@ input::-webkit-input-placeholder {
     margin: 0 1rem 0 1rem;
 }
 
-.button_dropdown {
+.dropdown__button {
     width: 8rem;
     height: 1.5rem;
     display: flex;
@@ -158,15 +142,10 @@ input::-webkit-input-placeholder {
     margin: 0.25rem 1rem 0.25rem 1rem;
 }
 
-.image-size {
-    width: 1rem;
-}
-
-.image_color_white {
+.block__image_color-white {
     fill: var(--background-color-white);
 }
 
-.image_color_blue {
+.block__image_color-blue {
     fill: var(--background-color-blue);
 }
-
