--- a/searchbar.css
+++ b/searchbar.css
@@ -5,7 +5,7 @@
     --background-color-day-light-blue: #BAD8F5;
 }
 
-.searchbar-wrapper {
+.searchbar {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,7 +19,7 @@
     box-sizing: border-box;
 }
 
-.searchbar-input {
+.searchbar__input {
     box-sizing: border-box;
     width: 13.75rem;
     height: 2rem;
@@ -37,11 +37,11 @@
     background-size: auto 40%;
 }
 
-.position {
+.searchbar_icon-position {
     position: relative;
 }
 
-.searchbar_button {
+.searchbar__button {
     border: none;
     position: absolute;
     right: 0.1rem;
@@ -50,16 +50,22 @@
     height: 1.5rem;
 }
 
-.button_color_white {
+.searchbar__button_white {
     background-color: var(--background-color-white)
 }
 
-.image-size {
+.searchbar__image_size {
     width: 1rem;
     height: 1rem;
+}
+
+.searchbar__image {
+    border: none;
+    position: absolute;
+    right: 0.4rem;
+    top: 0.2rem;
 }
 
 input::-webkit-input-placeholder {
     color: var(--background-color-day-light-blue);
 }
-
