--- a/input.css
+++ b/input.css
@@ -17,10 +17,11 @@
     border: 0.0625rem dashed var(--background-color-purple);
     box-sizing: border-box;
     gap: 3.125rem;
+    font-family: 'Ubuntu', serif;
 }
 
-.input__text {
-    font-family: 'Ubuntu', serif;
+.input-box__text {
+    /* font-family: 'Ubuntu', serif; */
     font-style: normal;
     font-weight: 400;
     font-size: 0.8125rem;
@@ -57,32 +58,27 @@
     top: 1.9rem;
 }
 
-.input-box__button_size {
-    width: 1rem;
-    height: 1rem;
-}
-
-.input-box__image {
+.input-box__icon {
     border: none;
     position: absolute;
     right: 0.5rem;
     top: 1.9rem;
 }
 
-.input-box__image_size {
+.input-box__icon_size-small {
     width: 1rem;
     height: 1rem;
 }
 
-.input-box_icon-position {
+.input-box__icon-position {
     position: relative;
 }
 
-.input-box__button_white {
+.input-box__button_color-white {
     background-color: var(--background-color-white)
 }
 
-.input-box__image_light-blue {
+.input-box__icon_color-light-blue {
     background: var(--background-color-day-light-blue);
 }
 
