--- a/button.css
+++ b/button.css
@@ -2,6 +2,7 @@
     --background-color-blue: #459DF5;
     --background-color-white: #FFFFFF;
     --background-color-purple: #8055FF;
+    --background-color-black: #000000;
 }
 
 .button-wrapper {
@@ -30,21 +31,25 @@
 .button {
     display: flex;
     margin-bottom: 1rem;
-    /* justify-content: center; */
-    /* align-items: flex-start; */
     border-radius: 0.25rem;
-    /* padding: 0.5rem 1rem; */
-    /* gap: 0.5rem; */
     border: none; 
     box-sizing: border-box;
 }
 
 .button_color-blue {
     background-color: var(--background-color-blue);
+    fill: var(--background-color-white);
 }
 
 .button_color-white {
     background-color: var(--background-color-white);
+    fill: var(--background-color-blue);
+}
+
+.button_color-black {
+    background-color: var(--background-color-white);
+    color: var(--background-color-black);
+    fill: var(--background-color-black);
 }
 
 .button__text {
@@ -55,11 +60,11 @@
     line-height: 1rem;
 }
 
-.button__text_color-white {
+.button_color-blue .button__text {
     color: var(--background-color-white);
 }
 
-.button__text_color-blue {
+.button_color-white .button__text {
     color: var(--background-color-blue);
 }
 
@@ -85,10 +90,3 @@
     width: 1rem;
 }
 
-.button__icon_color-white {
-    fill: var(--background-color-white);
-}
-
-.button__icon_color-blue {
-    fill: var(--background-color-blue);
-}
